# paper_analysis

./: .gitignore  Entry.py  README.md  README_ZH.md  pyproject.toml
src/: analyse.py  fetch.py  main.py  parse.py  predict.py
src/cpp/: CMakeLists.txt  check.cpp  freq.cpp  paper.hpp  words.hpp
src/python/: analyse.py  fetch.py  main.py  parse.py  predict.py
